--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Aryaman</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="C:\Users\bishe\Documents\CompSciClub\css\bootstrap.min.css" rel="stylesheet">
+    <link href="C:\Users\bishe\Documents\GitHub\bishenc.github.io\css\bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
